# sakiot-monorepo

./: .clinerules  .env.example  .gitignore  Cargo.toml  DEPLOYMENT_PLAN.md  README.md  STAGING.md  build.rs  build.sh  callback.html  clippy.toml  compose.dev.yml  debug_build.sh
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.sqlx/: query-0343f70de98d9caa4f3833c15a6a3cd3319a8ca96aa4fa331d65951e15d98c62.json  query-068b95d931c9292b9c723e685e6d95f68752492736a5b5500fb1ecb5d4f4a800.json  query-06db36370657de4e539ea32c2f3d1299b364b028570d103aaca99267c51bc3ff.json  query-09135d74bac810ca8a9f8a3b4bece669abf21a8836359a91b4c25a16b28e9e61.json  query-14c08b3c8ba18f029aa7052cfa23d12161d22700f847c5f93e68e64a8e5dd998.json  query-16331019b7bfe0a45f2dab174bab411e8ea16e4937a98893c23b804a83c48724.json  query-16cf8803673d7a2cb729a151128bdf162cc7b5c14e1b15b9ac42685440b81a86.json  query-1e3e19b090287ccb502bb530d99433b22047dcce9e6b9454e41e42b5277c50e9.json  query-227f6d70f4d383bec8340fe88f24952d60cfbbc707e3d37d4bc00f1a796cf940.json  query-22a0a5e933e5af04b0b7216fcae582d011d63a316c0b463f2630a0e1140e23f8.json  query-232ea605a5e16173d58a9c7e7bc625f23f32b1198302ba6752921acd02c5115f.json  query-25f3a591d960f429e7a62f9d6fd792fb50a8013328f5818a3ec8d75a6ca67d3b.json  query-27a865648413577152b970216c7a2bbf30aaa935b362c7efe815d7790b89e0f5.json  query-2896307fefad1182280af937726b55844a76e4c6a71c09ed7469dcab997ce10f.json  query-29938ba398a2b0889344fd430a488fb6c46466230b724c060da557ecf6db97ec.json  query-2f35f96297078fe319e51b054da4222ec90e74d333738716329868d593697017.json  query-330e2e45d1d93636f30436fafd050f779e9e5466e34c6e881f5f09249a716032.json  query-3334ec94ac0e1215adefeeeaca3b003b155a6103145fd516925b9662def96de3.json  query-3a207b076fd6c81745a088c0e6175d12b7b26b36d0cce09628e6a6d531dc89b2.json  query-3d084e21b90ef322b0e60fbd229f02721c4e7e51712020b1c65e0ba67ccd0cff.json  query-40a885cc74436157b1c45ef079cb98e97858cc1caf1b84e4b7d3a0c54f103f83.json  query-41544da1fbce0ff501ff575b9eff868ef8deb24129f5b9ff09c851ae94f0bc48.json  query-42a1bf7aeb2248f329594af4951eab90b9e0aa59927e412517217d59a2491b0b.json  query-4b27c5310cd4d901105733d33ed9e6199d022912e5f31e01af8a79669e08e638.json  query-4c1cf82a3355d959591ea687bc53a2d6db507c7b7578110df19554432882b7b6.json  query-4ea8ff95f88bd81078439078aaa47be65d45d516b2baab51561a3a0312a0ee5b.json  query-4f87c18ccb42e85306dad8156dfa91095c3441f71750627c43941b70b03bd22c.json  query-541126ae31a027f979d7d7fd08edd9140abfb90674da9c7084eb3e793a73f795.json  query-58392ffea8eb527849865769ffe1722448f61921c9a48f4baa3156da396d3eb1.json  query-5857e0391f370550f5cdab9083b0ad6f310e79448148aac272e6d3d3dc4fa202.json  query-5a46bc29e0d5b1df1812c5f0b00d54af2699f3095d34e6ce5bffc2903d59375b.json  query-5c4a9818605469851ab0a67054294d825763a4bdd21191fb4915b3c852cc2bb9.json  query-5d39b7a9859e1a26850c6e34186fd18b55734801026b0acd50248d36fb172f0e.json  query-5ff75131cce9583c17ec3042b8191e4a97e9f4f4a21d29c6cf6e87f347bfe759.json  query-603a42b9cd064d4b81fd8aac64ea68d0eea503f6f072a78476a3eb16a039ef7e.json  query-60fd0d2b65cc07e03aed2ea972f78c92e51381dfcdf63df854ecb056fa911a6c.json  query-63a99d22680cf49a418e7f3dd2421eff576becbc33cf17920f2b644c576c07a4.json  query-66507c294b08e57f2edd3dfec071ae14f91ac2f7dfcbbf4f62e1adb94e89b02c.json  query-6c03fabcbd5b4658b90f9640919d4d65b089b7cead2e7a5e4f2a64767794f2f8.json  query-71980c1246bfffe5203f3f474da637af172a3675a6fa24afd35f48dafef0b138.json  (+49 more)
FBI-agent/: .gitignore  AGENTS.md  Cargo.toml  README.md  build.sh  debug_build.sh  file_size.sh
FBI-agent/deploy/: drain-deploy.sh  force-stop-drain.sh
FBI-agent/deploy/systemd/user/: fbi-agent@.service
FBI-agent/src/: app.rs  cast.rs  config.rs  cooldown.rs  deployment.rs  heartbeat.rs  reaper.rs  runtime.rs  shutdown.rs  telemetry.rs
FBI-agent/src/commands/: stamp.rs  voice_controls.rs
FBI-agent/src/database/: guild_cache.rs  recordings.rs  runtime.rs  voice_events.rs
FBI-agent/src/events/: cache_ready.rs  guilds.rs  integrations.rs  interactions.rs  mod.rs  ogg_opus_writer.rs  roles.rs  voice.rs
FBI-agent/src/events/voice/: session.rs
FBI-agent/src/events/voice_receiver/: actor.rs  disconnect.rs  mod.rs  pause.rs  recordings.rs
FBI-agent/src/events/voice_receiver/actor/: handle.rs  lifecycle.rs  mod.rs  packets.rs  recovery.rs
FBI-agent/src/grpc/: admin.rs  dashboard.rs  jammer.rs  mod.rs  snapshot.rs
FBI-agent/src/metrics/: presence.rs  recording.rs
FBI-agent/src/tests/: audio_paths.rs  db_contract.rs  mod.rs
deploy/: drain-deploy.sh  drain-status.sh
migrations/: 00000000000000_baseline.sql  20260506212522_add_waveform_end_ts_to_audio_files.sql  20260509010000_define_permission_overwrite_helpers.sql  20260510000001_backfill_user_name_history_baseline.sql  20260531000000_voice_rewrite_contracts.sql  (+1 more)
ops/: DATA_MIGRATION_PLAN.md  README.md  (+10 more)
ops/sakiot-deploy/: Cargo.toml
ops/sakiot-deploy/src/: admin_api.rs  clock.rs  components.rs  config.rs  deploy.rs  fsx.rs  git.rs  lib.rs  lock.rs  main.rs  release.rs  runner.rs  status.rs  systemctl.rs  validate.rs  web_api.rs
ops/sakiot-deploy/tests/: e2e_command_log.rs  release_fs.rs
(+198 files in other folders)
