[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["process"] }
actix = "0.13"
actix-web = { version = "4", features = ["openssl"] }
actix-rt = "2.9.0"
actix-cors = "0.7"
actix-files = "0.6"
openssl = { version = "0.10", features = ["v110"] }
actix-web-lab = "0.20"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = [
	"runtime-tokio-rustls",
	"postgres",
	"chrono",
] }
jsonwebtoken = "9"
env_logger = "0.11"
time = "0.3.36"
serde_repr = "0.1"
tonic = "0.12"
prost = "0.13"
bitflags = "2.0.2"
thiserror = "2"
once_cell = "1.10.0"
actix-web-actors = "4.2.0"
tokio-util = "0.7.8"
parking_lot = "0.12.1"
base64 = { version = "0.22.1", features = ["alloc"] }
tokio-stream = "0.1.18"
bytes = "1.11.1"
dotenvy = "0.15.7"
uuid = { version = "1.23.0", features = ["v4", "fast-rng"] }
sakiot-paths = { path = "../sakiot-paths" }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", features = [
	"grpc-tonic",
	"metrics",
] }
tracing-opentelemetry = "0.32.1"
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-scalar = { version = "0.3", features = ["actix-web"] }
libc = "0.2.186"
subtle = "2"
urlencoding = "2"

[features]
default = []
dev-login = []

[build-dependencies]
tonic-build = "0.12"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
